--- a/style/app.css
+++ b/style/app.css
@@ -31,7 +31,7 @@ html {
   padding: 0 15px; }
   @media only screen and (max-width: 1024px) {
     .container {
-      padding: 0 10vw; } }
+      padding: 0 30px; } }
 
 .flex-container {
   display: -webkit-box;
@@ -92,7 +92,7 @@ button, .btn {
   -webkit-box-align: center;
   -ms-flex-align: center;
   align-items: center;
-  padding: 3vw 3vw;
+  padding: 1vw 3vw;
   overflow: hidden;
   -webkit-transition: all 0.3s;
   -o-transition: all 0.3s;
@@ -129,7 +129,7 @@ button, .btn {
     font-family: "Lato", sans-serif;
     color: #9c9b9b;
     text-transform: uppercase;
-    font-size: 1.2rem; }
+    font-size: 1rem; }
 
 .mobile-toggle {
   display: none;
@@ -156,7 +156,7 @@ button, .btn {
 @media only screen and (max-width: 1024px) {
   .header {
     display: block;
-    max-height: 85px; }
+    max-height: 70px; }
     .header__menu {
       padding-top: 10px;
       margin-bottom: 2em;
@@ -172,7 +172,7 @@ button, .btn {
 
 @media only screen and (max-width: 768px) {
   .header {
-    max-height: 70px; } }
+    max-height: 50px; } }
 
 .hero {
   position: relative;
@@ -321,19 +321,19 @@ button, .btn {
     .hero .hero__text {
       margin-bottom: 65px;
       font-size: 1rem; } }
-  @media only screen and (max-width: 575px) {
+  @media only screen and (max-width: 430px) {
     .hero .hero__content {
-      margin-left: 10px; }
+      margin-left: 0; }
     .hero .hero__title {
-      font-size: 3.5rem; } }
+      font-size: 3rem; } }
 
 .about {
-  padding: 22.22vh 0;
+  padding: 10vh 0;
   position: relative;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  height: 100vh; }
+  overflow: hidden; }
   .about .cover-text {
     color: #e6e6e6;
     opacity: .2; }
@@ -359,6 +359,7 @@ button, .btn {
     font-family: "Avenir Next Cyr Demi", sans-serif;
     font-size: 5.14rem;
     color: #333333;
+    opacity: .85;
     text-align: center;
     text-transform: uppercase;
     letter-spacing: 0.4em;
@@ -371,37 +372,40 @@ button, .btn {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
-    -webkit-box-orient: horizontal;
-    -webkit-box-direction: reverse;
-    -ms-flex-direction: row-reverse;
-    flex-direction: row-reverse;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
+    flex-direction: column;
     -webkit-box-pack: justify;
     -ms-flex-pack: justify;
     justify-content: space-between; }
-  .about .about__pictures--frame {
-    position: relative;
-    width: 25vw;
-    height: 25vw;
-    overflow: hidden; }
-    .about .about__pictures--frame:before {
-      content: '';
-      position: absolute;
-      width: 100%;
-      height: 100%;
-      background-color: rgba(255, 255, 255, 0.8); }
-  .about .about__pictures--top {
-    margin-left: -70%; }
-  .about .about__pictures--bottom {
-    margin-top: -50%; }
-  .about .about__pictures--img {
-    width: auto;
-    height: 100%; }
+  .about .about__pictures {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: justify;
+    -ms-flex-pack: justify;
+    justify-content: space-between; }
+    .about .about__pictures--frame {
+      position: relative;
+      width: 450px;
+      height: 350px;
+      overflow: hidden; }
+      .about .about__pictures--frame img {
+        width: auto;
+        height: 100%; }
+      .about .about__pictures--frame:before {
+        content: '';
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        background-color: rgba(255, 255, 255, 0.4); }
   .about .about__text {
-    margin-left: 100px;
+    margin-top: 70px;
     position: relative;
     -ms-flex-item-align: end;
     align-self: flex-end;
-    width: 50%;
+    width: 70%;
     font-family: "Lato", sans-serif;
     font-size: 1rem;
     color: #999999;
@@ -411,65 +415,41 @@ button, .btn {
     .about .about__text:before {
       content: '';
       position: absolute;
-      top: -45px;
-      width: 400px;
-      height: 4px;
+      top: -20%;
+      width: 67%;
+      height: 3px;
       background-color: #ededed; }
   @media only screen and (max-width: 1024px) {
-    .about {
-      padding: 15vw 0; }
-      .about .about__title {
-        font-size: 4rem; }
-      .about .about__pictures--frame {
-        width: 35vw;
-        height: 35vw; }
-      .about .about__pictures--bottom {
-        margin-top: -30%; } }
-  @media only screen and (max-width: 991px) {
-    .about .about__title {
-      width: -webkit-min-content;
-      width: -moz-min-content;
-      width: min-content; }
-    .about .about__block {
+    .about .about__pictures--frame {
+      width: 44vw;
+      height: 34vw; }
+    .about .about__text {
+      width: 85%;
+      -ms-flex-item-align: initial;
+      -ms-grid-row-align: initial;
+      align-self: initial; } }
+  @media only screen and (max-width: 575px) {
+    .about .about__pictures {
       -webkit-box-orient: vertical;
       -webkit-box-direction: normal;
       -ms-flex-direction: column;
       flex-direction: column; }
-    .about .about__pictures {
-      display: -webkit-box;
-      display: -ms-flexbox;
-      display: flex;
-      -webkit-box-orient: horizontal;
-      -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-      flex-direction: row;
-      -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-      justify-content: space-between; }
+      .about .about__pictures--frame {
+        width: 51vw; }
       .about .about__pictures--top {
-        margin: 0; }
+        margin-bottom: 15px; }
       .about .about__pictures--bottom {
-        margin-top: 15%; }
-    .about .about__text {
-      width: 100%;
-      margin-left: 0;
-      -ms-flex-item-align: initial;
-      -ms-grid-row-align: initial;
-      align-self: initial; } }
-  @media only screen and (max-width: 767px) {
+        -ms-flex-item-align: end;
+        align-self: flex-end; }
     .about .about__title {
-      top: 30%; }
-    .about .about__pictures--frame {
-      width: 38vw;
-      height: 38vw; }
-    .about .about__pictures--bottom {
-      margin-top: 20vw; }
-    .about .about__text {
-      font-size: 1.5rem; } }
-  @media only screen and (max-width: 575px) {
+      font-size: 4rem; } }
+  @media only screen and (max-width: 497px) {
     .about .about__title {
-      top: 45%;
-      font-size: 3.5rem; } }
+      font-size: 3rem; } }
+  @media only screen and (max-width: 390px) {
+    .about .about__title {
+      top: 40%;
+      font-size: 2.5rem; } }
 
 .services {
   padding: 25vh 0 18.5vh;
