--- a/style/app.scss
+++ b/style/app.scss
@@ -41,9 +41,9 @@ html{
   margin: 0 auto;
   padding: 0 15px;
 
-    @media only screen and (max-width: 1024px){
-        padding: 0 10vw;
-    }
+  @media only screen and (max-width: 1024px){
+    padding: 0 30px;
+  }
 }
 
 .flex-container{
@@ -105,7 +105,7 @@ button, .btn{
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 3vw 3vw;
+  padding: 1vw 3vw;
   overflow: hidden;
   -webkit-transition: all 0.3s;
   transition: all 0.3s;
@@ -154,7 +154,7 @@ button, .btn{
     font-family: $mainFf;
     color: #9c9b9b;
     text-transform: uppercase;
-    font-size: 1.2rem;
+    font-size: 1rem;
   }
 }
 
@@ -186,7 +186,7 @@ button, .btn{
 @media only screen and (max-width: 1024px){
   .header{
     display: block;
-    max-height: 85px;
+    max-height: 70px;
 
     &__menu{
       padding-top: 10px;
@@ -210,7 +210,7 @@ button, .btn{
 
 @media only screen and (max-width: 768px){
   .header{
-    max-height: 70px;
+    max-height: 50px;
   }
 }
 
@@ -440,13 +440,13 @@ button, .btn{
     }
   }
 
-  @media only screen and (max-width: 575px){
+  @media only screen and (max-width: 430px){
     .hero{
       &__content{
-        margin-left: 10px;
+        margin-left: 0;
       }
       &__title{
-        font-size: 3.5rem;
+        font-size: 3rem;
       }
     }
   }
@@ -455,10 +455,10 @@ button, .btn{
 // about
 
 .about{
-  padding: 22.22vh 0;
+  padding: 10vh 0;
   position: relative;
   display: flex;
-  height: 100vh;
+  overflow: hidden;
 
   .cover-text{
     color: #e6e6e6;
@@ -492,6 +492,7 @@ button, .btn{
     font-family: $secBold;
     font-size: 5.14rem;
     color: #333333;
+    opacity: .85;
     text-align: center;
     text-transform: uppercase;
     letter-spacing: 0.4em;
@@ -507,17 +508,24 @@ button, .btn{
     z-index: 1;
 
     display: flex;
-    flex-direction: row-reverse;
+    flex-direction: column;
     justify-content: space-between;
   }
 
   .about__pictures{
+    display: flex;
+    justify-content: space-between;
 
     &--frame{
       position: relative;
-      width: 25vw;
-      height: 25vw;
+      width: 450px;
+      height: 350px;
       overflow: hidden;
+
+      img{
+        width: auto;
+        height: 100%;
+      }
 
       &:before{
         content: '';
@@ -525,29 +533,16 @@ button, .btn{
         width: 100%;
         height: 100%;
 
-        background-color: rgba(255, 255, 255, 0.8);
+        background-color: rgba(255, 255, 255, 0.4);
       }
-    }
-
-    &--top{
-      margin-left: -70%;
-    }
-
-    &--bottom{
-      margin-top: -50%;
-    }
-
-    &--img{
-      width: auto;
-      height: 100%;
     }
   }
 
   .about__text{
-    margin-left: 100px;
+    margin-top: 70px;
     position: relative;
     align-self: flex-end;
-    width: 50%;
+    width: 70%;
 
     font-family: $mainFf;
     font-size: 1rem;
@@ -559,92 +554,61 @@ button, .btn{
     &:before{
       content: '';
       position: absolute;
-      top: -45px;
-      width: 400px;
-      height: 4px;
+      top: -20%;
+      width: 67%;
+      height: 3px;
 
       background-color: #ededed;
     }
   }
 
   @media only screen and (max-width: 1024px){
-      padding: 15vw 0;
-
-      .about{
-
-      &__title{
-        font-size: 4rem;
-      }
-
-      &__pictures--frame{
-        width: 35vw;
-        height: 35vw;
-      }
-
-      &__pictures--bottom{
-        margin-top: -30%;
-      }
-    }
-  }
-
-  @media only screen and (max-width: 991px){
     .about{
-      &__title{
-        width: min-content;
-      }
-
-      &__block{
-        flex-direction: column;
-      }
-
-      &__pictures{
-        display: flex;
-        flex-direction: row;
-        justify-content: space-between;
-
-        &--top{
-          margin: 0;
-        }
-
-        &--bottom{
-          margin-top: 15%;
-        }
+      &__pictures--frame{
+        width: 44vw;
+        height: 34vw;
       }
 
       &__text{
-        width: 100%;
-        margin-left: 0;
+        width: 85%;
         align-self: initial;
       }
     }
   }
 
-  @media only screen and (max-width: 767px){
-    .about{
+  @media only screen and (max-width: 575px){
+    .about__pictures{
+      flex-direction: column;
 
-      &__title{
-        top: 30%;
+      &--frame{
+        width: 51vw;
       }
 
-      &__pictures--frame{
-        width: 38vw;
-        height: 38vw;
+      &--top{
+        margin-bottom: 15px;
       }
 
-      &__pictures--bottom{
-        margin-top: 20vw;
+      &--bottom{
+        align-self: flex-end;
       }
+    }
 
-      &__text{
-        font-size: 1.5rem;
-      }
+    .about__title{
+      
+      font-size: 4rem;
     }
   }
 
-  @media only screen and (max-width: 575px){
+  @media only screen and (max-width: 497px){
     .about__title{
-      top: 45%;
-      font-size: 3.5rem;
+      font-size: 3rem;
+    }
+  }
+
+  @media only screen and (max-width: 390px){
+    .about__title{
+      top: 40%;
+      font-size: 2.5rem;
     }
   }
 }
