--- a/app/scss/app.scss
+++ b/app/scss/app.scss
@@ -1236,6 +1236,11 @@ button, .btn{
       &--small{
         width: 90%;
         margin: 0 auto;
+
+        .slick-list{
+          margin-top: 0;
+          transform: none;
+        }
       }
 
       &--big{
